
[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
walkdir="2.3.2"
dashmap="5.2.0"