
[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros","signal"] }
walkdir="2.3.2"
flate2 = { version = "1.0.22" }


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false