[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "feoco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hyper = { version = "0.14",default-features = false, features = ["server", "http1", "tcp"] }
tokio = { version = "1.17.0", default-features = false,  features = ["rt-multi-thread", "macros","signal"] }
brotli = {version="3.3.4", default-features = false, features = ["std"]}
flate2 = { version = "1.0.22",default-features = false, features =["miniz_oxide"] }
mime_guess={ version = "2.0.4", default-features = false }
serde = {version="1.0",features = ["derive","std"] , default-features = false}
serde_yaml = {version="0.8"}
lazy_static="1.3.0"
hashbrown = {version = "0.12" ,default-features = false, features = ["ahash"] }
percent-encoding = "2.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
